modified:   app/controllers/event_masters_controller.rb 	modified:   app/controllers/event_ticket_types_controller.rb 	modified:   app/models/category.rb 	modified:   app/models/event_master.rb 	modified:   app/models/event_ticket_type.rb 	modified:   app/models/sub_category.rb 	modified:   app/views/event_masters/_form.html.erb 	modified:   app/views/event_masters/index.html.erb 	modified:   app/views/event_masters/show.html.erb 	modified:   app/views/event_ticket_types/_form.html.erb 	modified:   app/views/event_ticket_types/edit.html.erb 	modified:   app/views/event_ticket_types/index.html.erb 	modified:   app/views/event_ticket_types/new.html.erb 	modified:   app/views/event_ticket_types/show.html.erb 	modified:   config/routes.rb 	modified:   db/migrate/20150322073456_devise_create_users.rb 	new file:   db/migrate/20150426132447_add_attachment_image_to_event_masters.rb 	new file:   db/migrate/20150427172106_add_event_master_to_event_ticket_type.rb 	new file:   db/migrate/20150427182350_change_data_type_for_description_in_event_ticket_type.rb

--- a/app/views/event_masters/_form.html.erb
+++ b/app/views/event_masters/_form.html.erb
@@ -21,9 +21,9 @@
     <%= f.input :private %>
   </div>
   <div class="field">
-  	<%= f.semantic_fields_for :event_category_mapping do |ecm| %>
-      <%= ecm.select :category, Category.all.collect {|s| [s.name, s.id]},:input_html => {:onchange => '$.get("/event_master/populate_subcategory")'}, :include_blank => '-Please Select-' %>
-	  <%= ecm.input :sub_category, :as => :check_boxes, :collection => SubCategory.all %>
+  	<%= f.semantic_fields_for :event_category_mappings do |ecm| %>
+      <%= ecm.select :categories_id, Category.all.collect {|s| [s.name, s.id]},:input_html => {:onchange => '$.get("#")'}, :include_blank => '-Please Select-' %>
+	  <%= ecm.input :sub_categories_ids, :as => :check_boxes, :collection => SubCategory.all %>
     <% end %>
     
   </div>
