--- a/app/views/event_ticket_types/edit.html.erb
+++ b/app/views/event_ticket_types/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @event_ticket_type %> |
-<%= link_to 'Back', event_ticket_types_path %>
+<%= link_to 'Show', edit_event_master_event_ticket_type_path(@event_master,@event_ticket_type) %> |
+<%= link_to 'Back', event_master_event_ticket_types_path %>
