--- a/app/views/event_ticket_types/show.html.erb
+++ b/app/views/event_ticket_types/show.html.erb
@@ -23,5 +23,5 @@
   <%= @event_ticket_type.max %>
 </p>
 
-<%= link_to 'Edit', edit_event_ticket_type_path(@event_ticket_type) %> |
-<%= link_to 'Back', event_ticket_types_path %>
+<%= link_to 'Edit', edit_event_master_event_ticket_type_path(@event_master,@event_ticket_type) %> |
+<%= link_to 'Back', event_master_event_ticket_types_path %>
