--- a/app/views/event_masters/show.html.erb
+++ b/app/views/event_masters/show.html.erb
@@ -46,5 +46,11 @@
   <%= @event_master.max %>
 </p>
 
+<p>
+  <strong>Max:</strong>
+ <%= image_tag @event_master.image.url(:preview) %>
+</p>
+ 
+
 <%= link_to 'Edit', edit_event_master_path(@event_master) %> |
 <%= link_to 'Back', event_masters_path %>
