--- a/app/views/event_ticket_types/_form.html.erb
+++ b/app/views/event_ticket_types/_form.html.erb
@@ -1,37 +1,27 @@
-<%= form_for(@event_ticket_type) do |f| %>
-  <% if @event_ticket_type.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@event_ticket_type.errors.count, "error") %> prohibited this event_ticket_type from being saved:</h2>
 
-      <ul>
-      <% @event_ticket_type.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<%= semantic_form_for [@event_master,@event_ticket_type], :input_html => {:multiple => true}   do |f| %>
+ 
+
+   <div class="field">
+    <%= f.input :name %>
+  </div>
+  <div class="field">
+    <%= f.input :description %>
+  </div>
+  <div class="field">
+    <%= f.input :price %>
+  </div>
+   <div class="field">
+    <%= f.input :min %>
+  </div>
+  </div>
+   <div class="field">
+    <%= f.input :max %>
+  </div>
+  
+  <%= f.actions do %>
+      <%= f.action :submit, :as => :button %>
+      <%= f.action :cancel, :as => :link %>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.number_field :description %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.number_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :min %><br>
-    <%= f.number_field :min %>
-  </div>
-  <div class="field">
-    <%= f.label :max %><br>
-    <%= f.number_field :max %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+ 
 <% end %>
