--- a/app/views/event_ticket_types/new.html.erb
+++ b/app/views/event_ticket_types/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', event_ticket_types_path %>
+<%= link_to 'Back', event_master_event_ticket_types_path %>
