Added New Fields for EventMaster

--- a/app/views/event_masters/_event_master.html.erb
+++ b/app/views/event_masters/_event_master.html.erb
@@ -2,5 +2,5 @@
   <h2><%= event_master.title %></h2>
   <p><%= event_master.description %></p>
   <td><%= image_tag event_master.image.url(:thumb) %></td>
-  <td><%= link_to 'Show', event_master %></td>
+  <td><%= link_to 'Show', list_event_master_path(event_master) %></td>
 </div>
