--- a/app/views/list_event_master/index.html.erb
+++ b/app/views/list_event_master/index.html.erb
@@ -1,5 +1,5 @@
 <div id="events">
-  <h1>Events</h1>
+  <h1>Popular Events</h1>
   <%= render @event_master %>
 </div>
 <%= will_paginate @event_master %>
