added ckeditor gem and changed in forms

--- a/app/views/event_masters/_form.html.erb
+++ b/app/views/event_masters/_form.html.erb
@@ -1,6 +1,4 @@
-<script
 
-></script>
 
  <%= semantic_form_for @event_master, :input_html => {:multiple => true}   do |f| %>
   
@@ -12,7 +10,7 @@
     <%= f.input :url %>
   </div>
   <div class="field">
-    <%= f.input :description %>
+    <%= f.input :description, :as => :ckeditor %>
   </div>
   <div class="field">
     <%= f.input :capacity %>
