--- a/app/views/event_ticket_types/_form.html.erb
+++ b/app/views/event_ticket_types/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :name %>
   </div>
   <div class="field">
-    <%= f.input :description %>
+    <%= f.input :description, :as => :ckeditor %>
   </div>
   <div class="field">
     <%= f.input :price %>
