--- a/app/views/list_event_master/show.html.erb
+++ b/app/views/list_event_master/show.html.erb
@@ -1,3 +1,8 @@
+<script type="text/javascript">
+	
+</script>
+
+
 <h1>ListEventMaster#show</h1>
 <p>Find me in app/views/list_event_master/show.html.erb</p>
 <%= @event_master.title %>
